// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render button element correctly 1`] = `
<div>
  <button
    class="box mm-button-base mm-button-base--size-md mm-button-primary box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-primary-inverse box--background-color-primary-default box--rounded-pill box--border-color-primary-default box--border-style-solid box--border-width-1"
    data-testid="button"
  >
    <span
      class="box mm-text mm-button-base__content mm-text--body-md mm-text--color-inherit box--display-inline-flex box--gap-2 box--flex-direction-row box--justify-content-center box--align-items-center"
    >
      Button
    </span>
  </button>
</div>
`;

exports[`Button should render with different button types 1`] = `
<div>
  <button
    class="box mm-button-base mm-button-base--size-md mm-button-primary box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-primary-inverse box--background-color-primary-default box--rounded-pill box--border-color-primary-default box--border-style-solid box--border-width-1"
    data-testid="primary"
  >
    <span
      class="box mm-text mm-button-base__content mm-text--body-md mm-text--color-inherit box--display-inline-flex box--gap-2 box--flex-direction-row box--justify-content-center box--align-items-center"
    >
      Button
    </span>
  </button>
  <button
    class="box mm-button-base mm-button-base--size-md mm-button-secondary box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-primary-default box--background-color-transparent box--rounded-pill box--border-color-primary-default box--border-style-solid box--border-width-1"
    data-testid="secondary"
  >
    <span
      class="box mm-text mm-button-base__content mm-text--body-md mm-text--color-inherit box--display-inline-flex box--gap-2 box--flex-direction-row box--justify-content-center box--align-items-center"
    >
      Button
    </span>
  </button>
  <button
    class="box mm-button-base mm-button-base--size-md mm-button-link box--padding-right-4 box--padding-left-4 box--display-inline-flex box--flex-direction-row box--justify-content-center box--align-items-center box--color-primary-default box--background-color-transparent box--rounded-pill box--border-style-none box--border-color-border-default box--border-width-1"
    data-testid="link"
  >
    <span
      class="box mm-text mm-button-base__content mm-text--body-md mm-text--color-inherit box--display-inline-flex box--gap-2 box--flex-direction-row box--justify-content-center box--align-items-center"
    >
      Button
    </span>
  </button>
</div>
`;
